fixed screenshot showing shit too much

--- a/src/style.css
+++ b/src/style.css
@@ -411,8 +411,9 @@ main#archive {
                 object-fit: contain;
 
                 /* Changes size */
+                max-height: 50%;
+                max-width: 100%;
                 padding: 5px 5px;
-                width: 100%;
             }
 
             /* Styles section */
